# TBD-practica

./: .gitignore  README.md  final.txt  imagenbmp.cpp  improvecosine.cpp
Framework/: README.md
Framework/grafica/: funciones.h  grafica.pro  grafica.pro.user.05e0cd9  mainwindow.cpp  mainwindow.h  mainwindow.ui
Practicas/Practica 1/Alejandro/: README.md
Practicas/Practica 1/Hayde/: README.md
Practicas/Practica 1/Jhunior/: CMakeCache.txt  DisplayImage  Makefile  README.md  cmake_install.cmake  ejercicio1_sumaponderada.cpp  ejercicio2_uni_histograma.cpp  ejercicio3_bi_histograma.cpp  ejercicio4_gamma.cpp  ejercicio5_ecualizacion.cpp  main.cpp
Practicas/Practica 2/Alejandro/: CMakeLists.txt  README.md  main.cpp
Practicas/Practica 2/Eduardo/: CMakeLists.txt  README.md  main.cpp
Practicas/Practica 2/Hayde/: README.md  (+1 more)
Trabajo_Final/: Final.ipynb  README.md
Trabajo_Final/gSLICrPy/: example.py
laboratorio_1/: README.md  imagenbmp.cpp  test
laboratorio_2/: README.md  a.out  laboratorio2  laboratorio2.c
laboratorio_3/: Laboratorio03_Colab.ipynb  Laboratorio_03.ipynb  README.md  SumColMatriz.cu  a.out  kernel.cu  matrixMul.cu
laboratorio_4/: CMakeCache.txt  CMakeLists.txt  Laboratorio_04.ipynb  Makefile  README.md  cmake_install.cmake  gamma_correction.cu  image_addition.cu  image_binarization.cu  image_equalization.cu  main.cpp  operator_and.cu  operator_not.cu  operator_or.cu  preprocess.cpp  rgba_to_grey.cu
laboratorio_5/: CMakeCache.txt  CMakeLists.txt  README.md  convolutional.cu  covolutional.ipynb
laboratorio_6/: Laboratorio_06.ipynb  README.md
(+61 files in other folders)
